# VoxelGame

./: .gitignore  Cargo.toml  README.md
crates/control/: Cargo.toml
crates/control/src/: camera.rs  input.rs
crates/geom/: Cargo.toml
crates/geom/src/: chunk.rs  entity.rs  lib.rs  map.rs
crates/geom/src/shaders/: chunk.frag  chunk.vert
crates/util/: Cargo.toml
crates/util/src/: lib.rs  morton.rs  octree.rs  texture.rs
src/: main.rs  mesh_generator.rs
src/shaders/: chunk.frag  chunk.vert
