[package]
name = "voxel_game"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control = { path = "./crates/control" }
geom = { path = "./crates/geom" }
util = { path = "./crates/util" }
bevy = { git = "https://github.com/bevyengine/bevy" }
rand = "0.7.3"

[workspace]
members = [
    "./crates/*"
]


