[package]
name = "voxel_game"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control = { path = "./crates/control" }
geom = { path = "./crates/geom" }
util = { path = "./crates/util" }
bevy = "0.4.0"
rand = "0.8.0"

[workspace]
members = [
    "./crates/*"
]


