[package]
name = "util"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.7.0"
image = "0.23.12"
bitvec = "0.19.4"
arrayvec = "0.5.2"
rand = "0.8.0"
bevy = "0.4.0"